test/functions/vass/varargs-1.good
varargs-1.chpl:79: error: inout varargs not currently supported
